[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/PlayerCharacter.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 13 )

[node name="PlayerCharacter" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
verticalSpeed = -1050
horizontalSpeed = 250

[node name="CollisionWithGround" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 4.76837e-006, 4.76837e-006 )
scale = Vector2( 2.46154, 2.46154 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="DashTiming" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="DashStopping" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="timeout" from="DashTiming" to="." method="_on_DashTiming_timeout"]

[connection signal="timeout" from="DashStopping" to="." method="_on_DashStopping_timeout"]


